--- a/DesignerRHN/DesignerRHN-war/web/Concepto.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Concepto.xhtml
@@ -16,14 +16,14 @@
                         <fieldset style="position: absolute; left: 10px; top: 65px; font-size: 11px; width: 835px; height: 365px; border-radius: 10px; ">
                             <legend style="font-size: 12px; color: blue"><strong>Conceptos de Nómina</strong></legend>
 
-                            <p:dataTable id="datosConceptos" var="concepto" rowKey="#{concepto.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px; width: 642px"                           
-                                         value="#{controlConcepto.listaConceptosEmpresa}" scrollable="true" scrollWidth="642" scrollHeight="150"
+                            <p:dataTable id="datosConceptos" var="concepto" rowKey="#{concepto.secuencia}" rowIndexVar="indice" style="font-size: 10px; width: 1400px; position: inherit"                           
+                                         value="#{controlConcepto.listaConceptosEmpresa}" scrollable="true" scrollWidth="832" scrollHeight="300" liveScroll="true" scrollRows="50"
                                          filteredValue="#{controlConcepto.filtrardoConceptosEmpresa}" emptyMessage="No se encontrarón resultados para la búsqueda"
                                          editable="true" editMode="cell" >
 
                                 <p:ajax event="filter" listener="#{controlConcepto.eventoFiltrar()}"/>
 
-                                <p:column headerText="Cód.." sortBy="#{concepto.codigo}" filterBy="#{concepto.codigo}" filterMatchMode="contains" id="columnaCodigo" width="50" filterStyle="display: none; visibility: hidden;" >                                  
+                                <p:column headerText="Cód.." sortBy="#{concepto.codigo}" filterBy="#{concepto.codigo}" filterMatchMode="contains" id="columnaCodigo" width="25" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{concepto.codigo}" /></f:facet>  
                                         <f:facet name="input">
@@ -56,15 +56,18 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="Naturaleza" sortBy="#{concepto.naturaleza}" filterBy="#{concepto.naturaleza}" filterMatchMode="contains" id="columnaNaturaleza" width="80" filterStyle="display: none; visibility: hidden;" >                                                              
+                                <p:column headerText="Naturaleza" sortBy="#{concepto.naturalezaConcepto}" filterBy="#{concepto.naturalezaConcepto}" filterMatchMode="contains" id="columnaNaturaleza" width="80" filterStyle="display: none; visibility: hidden;" >                                                              
                                     <p:cellEditor>  
-                                        <f:facet name="output"><h:outputText id="outCiudad" value="#{concepto.naturaleza}"/></f:facet>  
+                                        <f:facet name="output"><h:outputText id="outCiudad" value="#{concepto.naturalezaConcepto}"/></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{concepto.naturaleza}" id="editarNaturaleza" style="font-size: 10px; border-radius: 0px; width: 93.5%; text-transform: uppercase"  >
-                                                <p:ajax event="change" listener="#{controlVigenciasTiposContratos.modificarVTC(indice, 'CIUDAD', info.ciudad.nombre)}" />
-                                                <p:ajax event="select" listener="#{controlVigenciasTiposContratos.cambiarIndice(indice, 3)}" />
-                                                <p:ajax event="dblclick" listener="#{controlVigenciasTiposContratos.asignarIndex(indice, 2, 0)}" />
-                                            </p:inputText>
+                                            <p:selectOneMenu id="editarNaturaleza" value="#{concepto.naturalezaConcepto}" style="font-size: 11px; width: 99%; font-weight: bold;" panelStyle="width: 115px" >  
+                                                <f:selectItem itemLabel="NETO" itemValue="NETO" />  
+                                                <f:selectItem itemLabel="GASTO" itemValue="GASTO" />
+                                                <f:selectItem itemLabel="DESCUENTO" itemValue="DESCUENTO" />  
+                                                <f:selectItem itemLabel="PAGO" itemValue="PAGO" />
+                                                <f:selectItem itemLabel="PASIVO" itemValue="PASIVO" />  
+                                                <p:ajax listener="#{controlConcepto.seleccionarNaturaleza(concepto.naturalezaConcepto, indice, 2)}" update="@this" />
+                                            </p:selectOneMenu>
                                         </f:facet>  
                                     </p:cellEditor>
 
@@ -216,12 +219,12 @@
                                         <h:outputText value="ET" />
                                     </f:facet>
                                 </p:column>
-                                
+
                                 <p:column headerText="Código Alternativo" sortBy="#{concepto.codigoalternativo}" filterBy="#{concepto.codigoalternativo}" filterMatchMode="contains" id="columnaCodigoAlternativo" width="70" filterStyle="display: none; visibility: hidden;" >
                                     <p:cellEditor>   
                                         <f:facet name="output"><h:outputText value="#{concepto.codigoalternativo}" style="text-transform: uppercase" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{concepto.codigoalternativo}" id="editarEnvio" style="font-size: 10px; border-radius: 0px; width: 93.5%; text-transform: uppercase" >
+                                            <p:inputText value="#{concepto.codigoalternativo}" id="editarCodigoAlternativo" style="font-size: 10px; border-radius: 0px; width: 93.5%; text-transform: uppercase" >
                                                 <p:ajax event="change" listener="#{controlVigenciasTiposContratos.modificarVTC(indice, 'N', info.inicioflexibiliza)}"/>
                                                 <p:ajax event="select" listener="#{controlVigenciasTiposContratos.cambiarIndice(indice, 6)}" />
                                             </p:inputText> 
